force-app/main/default/objects/PDRI__Event_Control_Item__c/PDRI__Event_Control_Item__c.object-meta.xml
<CustomObject>
    <label>Event Control Item</label>
    <nameField>
        <displayFormat>ECI-{00000000}</displayFormat>
        <label>Event Control Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Control Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>