force-app/main/default/objects/PDRI__Event_Control_Item__c/fields/PDRI__Event_Control__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Event_Control__c</fullName>
    <label>Event Control</label>
    <referenceTo>PDRI__Event_Control__c</referenceTo>
    <relationshipLabel>Event Control Items</relationshipLabel>
    <relationshipName>Event_Control_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>