force-app/main/default/objects/PDRI__Event_Control_Item__c/fields/PDRI__Event_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Event_Name__c</fullName>
    <label>Event Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>