force-app/main/default/objects/PDRI__Event_Control_Item__c/fields/PDRI__Event_Namespace__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Event_Namespace__c</fullName>
    <label>Event Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>